[package]
name = "markovr"
version = "0.1.0"
authors = ["erinpentecost <erin@pentecost.email>"]
edition = "2018"
publish = true
description = "Higher-order Markov Chains."
readme = "README.md"
repository = "https://github.com/erinpentecost/markovr"
license-file = "LICENSE.md"

[dependencies]
cfg-if = "0.1.10"
rand = { version = "0.7.3", optional = true}

[features]
default = ["rand"]
